# turnstile_solver

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: README.md
docker/services/solver/: entrypoint.sh  solver.Dockerfile
src/turnstile_solver/: __init__.py  __main__.py  browser_context_pool.py  constants.py  custom_rich_help_formatter.py  enums.py  main.py  page_pool.py  pool.py  proxy.py  proxy_provider.py  solver.py  solver_console.py  solver_console_highlighter.py  turnstile_result.py  turnstile_site.py  turnstile_solver_server.py  utils.py
src/turnstile_solver/tests/: conftest.py  test_solver.py
tests/: conftest.py  proxy_provider.py  test_solver.py
